<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".StoryOneListenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewListen"
            android:layout_width="213dp"
            android:layout_height="123dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/listenStory"
            android:textColor="@color/backgroundText"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonListenTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/backgroundstyle"
            android:gravity="center"
            android:scrollbars="vertical"
            android:text="@string/T11_Ans1"
            android:textSize="20sp"
            app:backgroundTint="@color/ButtonsBlueColor" />

        <Button
            android:id="@+id/buttonListenBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/backgroundstyle"
            android:text="@string/T11_Ans2"
            android:textColor="#ecf0f1"
            android:textSize="20sp"
            app:backgroundTint="@color/buttonsColor" />

    </LinearLayout>
</ScrollView>